--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-dropdown-picker": "^3.1.11",
+    "react-native-picker-select": "^7.0.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
